--- a/style.css
+++ b/style.css
@@ -152,17 +152,22 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    box-shadow: 7px 9px 20px 2px rgba(0,0,0,0.75);
+    box-shadow: -1px 2px 10px 1px rgba(0,0,0,0.75);
 }
 .card-img {
     height: 70%;
-    width : 100%
+    width : 100% ;
 }
 .card-text h3 {
     font-size: 30px;
     font-weight: 400;
 }
-
+.card-text {
+    padding-bottom: 3em;
+}
+.card:hover {
+    transform: scale(1.1);
+}
 /* contact start */
 
 .title-contact{
@@ -197,6 +202,7 @@
     font-size: 20px;
     
 }    
+
 .form-text:focus{
     box-shadow: 0 0 10px 4px #34495e;
 }
