--- a/style.css
+++ b/style.css
@@ -8,64 +8,83 @@
 
 /* navbar start  */
 
-  .nav {
-    background-color:#7400B8;
+  .top_nav {
+    background-color:#A1E4FC;
     overflow: hidden;
     font-family: 'Rubik', sans-serif;
+    
+    
   }
 
-  .nav a {
+  .top_nav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #ffffff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
     font-weight: bold;
   }
-  .nav-right {
+  .topnav_right {
     float: right;
   }
-  .nav-right button{
-    height: inherit;
-    width: 5rem;
+  .topnav_right button{
+    height: 20px;
+    width: 80px;
     border : none;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 15px;
+    
   }
-  .nav a:hover {
-    background-color: #ddd;
+  .top_nav a:hover {
+    background-color: #ffffff;
     color: black;
   }
+ 
+  @media screen and (max-width: 767px) {
+    .top_nav a {
+      float: none;
+      width: 100%;
+      margin: auto ;
+    }
+  } 
+
 /* navbar end  */
 
  /* About start  */
 
 .about_title {
     text-align: center;
-    font-size: 3rem;   
+    font-size: 50px;   
     font-weight: 400;
-
 }
 .about_container{
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    margin: 20px;
-
 }
 .about_left{
-    padding-right: 1em;
     text-align: center;
-    padding-top: 2em;
-    
+    padding-top: 20px;
+    width: 48%;
 }
 .about_right {
-    width : 35em;
-    height: 25em;
-    
+    width : 35%;
+    height: 300px;
 }
-
+.about_right img{
+    width: 100%;
+}
+@media screen and (max-width: 767px) {
+    .about_container{
+        display: inline-block;
+    }
+    .about_left,.about_right{
+        width: 100%;
+        padding-top: 15px;
+    }
+}
   /* About end  */
 
 
@@ -149,11 +168,14 @@
 {
     height: 20rem;
     width: 20rem;
-    background-color: #5E60CE;
+    background-color: #ffffff;
     text-align: center;
     display: flex;
     flex-direction: column;
-    box-shadow: -1px 2px 10px 1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 0px grey;
+    -webkit-transition:  box-shadow .6s ease-out;
+       box-shadow: .8px .9px 3px grey;
+  
 }
 .card-img {
     height: 70%;
@@ -167,21 +189,22 @@
     padding-bottom: 3em;
 }
 .card:hover {
-    transform: scale(1.1);
+    box-shadow: 1px 8px 20px grey;
+    -webkit-transition:  box-shadow .6s ease-in;
 }
 /* contact start */
 
 .title-contact{
     text-align: center;
-    font-size: 3rem;
+    font-size: 30px;
     font-weight: 400;
 }
 .contact-container{
     background-size: cover;
     padding: 40px 0;
     width: 100%;
-    height: 30rem;
-    background: #f2f2f2;
+    height: 500px;
+    background: #D5D4D4;
     margin: 40px auto;
 }
 .form-group{
@@ -211,7 +234,7 @@
     height: 50px;
     width: 100px;
     border: none;
-    background-color: green;
+    background-color: #A7FCA1;
     font-size: 20px;
     border-radius: 15px;
     cursor: pointer;
@@ -221,7 +244,7 @@
 }
 .btn:hover{
     background-color: white;
-    border: 3px solid green;
+    border: 3px solid #A7FCA1;
 }
 
 /* footer start */
@@ -229,7 +252,7 @@
 footer{
     display: block;
     text-align: center;
-    background-color: #64DFDF;
+    background-color: #A1E4FC;
     height: 50px;
     width: 100%;
     padding-top: 13px;
