--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
     .top_nav a {
       float: none;
       width: 100%;
-      margin: auto ;
+      font-size: 14px;
     }
   } 
 
@@ -84,7 +84,13 @@
         width: 100%;
         padding-top: 15px;
     }
-}
+    .about_title { 
+        font-size: 30px;
+        }
+        .about_left{
+            font-size:14px;
+        }
+    }
   /* About end  */
 
 
@@ -173,8 +179,8 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0px 0px 0px grey;
-    -webkit-transition:  box-shadow .6s ease-out;
-       box-shadow: .8px .9px 3px grey;
+    transition:  box-shadow .6s ease-out;
+    box-shadow: .8px .9px 3px grey;
   
 }
 .card-img {
@@ -190,22 +196,51 @@
 }
 .card:hover {
     box-shadow: 1px 8px 20px grey;
-    -webkit-transition: box-shadow .6s ease-in;
+    transition: box-shadow .6s ease-in;
 }
+
+@media screen and (max-width: 767px){
+    .title-ser{
+        font-size: 30px;
+    }
+    .service_container{
+        display:inline-block; 
+        height: 950px;
+        width: 100%;
+        text-align: center;
+        
+    }
+    .service_container .card{
+        width: 50%;
+        height: 300px;  
+        margin-bottom: 10px;
+    }
+    .card-img {
+        height: 70%;
+        width : 100% ;
+    }
+    .card-text h3 {
+        font-size: 18px;
+        font-weight: 400;
+    }
+    .card-text p {
+        font-size: 12px;
+        font-weight: 300;
+    }
+}
+
 /* contact start */
 
 .title-contact{
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
     font-weight: 400;
 }
 .contact-container{
     background-size: cover;
-    padding: 40px 0;
     width: 100%;
     height: 500px;
     background: #D5D4D4;
-    margin: 40px auto;
 }
 .form-group{
     max-width: 600px;
@@ -246,6 +281,32 @@
     background-color: white;
     border: 3px solid #A7FCA1;
 }
+@media screen and (max-width: 767px){
+    .title-contact{
+        font-size: 18px;
+         padding-top: 20px; 
+
+    }
+    .contact-container{
+        height: 350px;
+        width: 100%;
+        
+    }
+    .form-group{
+         width: 100%; 
+    }
+    .form-text{
+        width: 100%;
+        height: 10px;
+        font-size: 12px;
+    }
+    .btn{
+        height: 30px;
+        width: 70px;
+        font-size: 12px;
+    }
+
+}
 
 /* footer start */
 
@@ -255,9 +316,19 @@ footer{
     background-color: #A1E4FC;
     height: 50px;
     width: 100%;
-    padding-top: 13px;
 }
 
 footer p {
-    font-size: 20px;
+    font-size: 15px;
+    padding-top: 15px;
+}
+@media screen and (max-width: 767px){
+    footer{
+        height: 35px;
+        width: 100%;
+        
+    }
+    footer p{
+        font-size: 12px;
+    }
 }
