--- a/Red/style.css
+++ b/Red/style.css
@@ -11,6 +11,7 @@
     height: 60px;
     background-color:#ffffff;
     overflow: hidden;
+    
 }
 .mob_no{
     
@@ -18,23 +19,31 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #047985; 
-    text-align: center;
-    
-    clip-path: polygon(0 0, 100% 0, 85% 100%, 16% 99%);
-
+    text-align: center;  
+    clip-path: polygon(0 0, 100% 0, 91% 100%, 10% 100%);
 }
-
 .center_label li{
-    display: inline-block;
+    display: inline-block;   
     
 }
 .center_label li a {
     text-decoration: none;
     font-size: 14px;
     color: #ffffff;
-    border-right: 2px solid grey;
-    margin: 10px;
+    padding-right: 15px; 
+    letter-spacing: 1px;
+}
+.btn_right{
+    float: right;
+    background: #047985;
+    height: 60px;
+   padding: 0px 10px;
    
+}
+.btn_right a{
+    font-size: 25px;
+    text-align: center;
+    color: #ffffff;
 }
 .right_icon{ 
     float: right ;
@@ -50,17 +59,102 @@
     color: #111111;
     text-decoration: none;
     text-align: center;
-    margin-left: 20px; 
-    border-right: 2px solid grey;
+    margin-left: 40px; 
+    /* border-right: 2px solid grey; */
 }
-
+.right_icon li a .active{
+    background: #047985;
+    height: 55px;
+    width: 80px;
+    color:#ffffff;
+}
 
 
 /* main navbar start  */
+/*
 .main_navbar{
     width: 100%;
+    height: 50px;
     overflow: hidden;
     background-color: #CA595E;
 }
-.main_navbar a{
+ .main_navbar a{
+    display: inline-block;
+    float: left;
+    color: #ffffff;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+  }
+    .dropdown{
+    float: left;
+    overflow: hidden;
+    }
+    .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    background-color: inherit;
+    margin: 0;
+    }  
+*/
+.logo{
+    max-width: 110px;
+    height: auto;
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: 10px;
 }
+.main_navbar{
+    width: 100%;
+    height: 50px;
+    overflow: hidden;
+    background-color: #CA595E;
+}
+.main_navbar ul {
+    float: left;
+    margin-left: 145px;
+    padding: 13px;
+  }
+   .main_navbar ul li {
+    display: inline-block;
+    
+   }
+   .main_navbar ul li a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 20px;
+    text-align: center;
+    border: none;
+    outline: none;
+    margin-right: 15px;
+    padding: 13px 21px;
+    height: auto;
+    width: 300px;
+   }
+   .main_navbar ul li a:hover{
+      color :green;
+
+   } 
+  .btn_blog{
+      float: right;
+      width: 150px;
+      margin-right: 130px;
+      display: block;
+  }
+  .btn_blog a{
+    font-size: 20px;
+    text-align: center;
+    color: #ffffff;
+    text-decoration: none;
+    background: grey;
+    padding: 14px 35px;
+
+  }
+  .btn_blog:hover a{
+      color:#ecc317;    
+  }
