--- a/Red Moment/style.css
+++ b/Red Moment/style.css
@@ -71,35 +71,7 @@
 
 
 /* main navbar start  */
-/*
-.main_navbar{
-    width: 100%;
-    height: 50px;
-    overflow: hidden;
-    background-color: #CA595E;
-}
- .main_navbar a{
-    display: inline-block;
-    float: left;
-    color: #ffffff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    
-  }
-    .dropdown{
-    float: left;
-    overflow: hidden;
-    }
-    .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    background-color: inherit;
-    margin: 0;
-    }  
-*/
+
 .logo{
     max-width: 110px;
     height: auto;
@@ -117,8 +89,8 @@
 }
 .main_navbar ul {
     float: left;
-    margin-left: 145px;
-    padding: 13px;
+    padding-left: 145px;
+    
   }
    .main_navbar ul li {
     display: inline-block;
@@ -130,31 +102,48 @@
     font-size: 20px;
     text-align: center;
     border: none;
-    outline: none;
-    margin-right: 15px;
-    padding: 13px 21px;
-    height: auto;
-    width: 300px;
+    padding: 16px 21px;
+    display: inline-block;
    }
-   .main_navbar ul li a:hover{
-      color :green;
-
-   } 
+   
   .btn_blog{
-      float: right;
-      width: 150px;
-      margin-right: 130px;
-      display: block;
+      margin-left: 0;
+      left: 0;
   }
   .btn_blog a{
     font-size: 20px;
-    text-align: center;
+   
     color: #ffffff;
     text-decoration: none;
     background: grey;
-    padding: 14px 35px;
-
+    
   }
   .btn_blog:hover a{
-      color:#ecc317;    
+      color:#ecc317;  
   }
+  .main_navbar ul li:hover{
+    background-color :green;
+
+ } 
+
+/* dropdown   */
+
+
+.main_navbar  li ul{
+    display: none;
+    position: absolute;
+    background-color: grey;
+    width: 100%;
+    left: 0;
+    margin: 14px;
+}
+.main_navbar  li ul li{
+    width: 100%;
+    padding-top: 20px;  
+}
+.main_navbar  li ul li a{
+    color: white;
+}
+.main_navbar  li:hover ul {
+    display: block;
+}
