--- a/Red Moment/style.css
+++ b/Red Moment/style.css
@@ -240,4 +240,24 @@
 
 /*  -----   images start ---- */
 
+.img_container{
+        display: grid;
+        
+}
+.banner1{
+    grid-column: 1 / span 2;
+  grid-row: 1;
+}
+.banner2 , .banner3 {
+    grid-column: 1;
+    grid-row: 2;
+}
+.banner3{
+    grid-column: 1;
+    grid-row: 3;
+}
+.banner4 {
+    grid-column: 2;
+  grid-row: 2 / span 4;
 
+}
