working on sass

--- a/Red Moment/style.css
+++ b/Red Moment/style.css
@@ -73,10 +73,10 @@
   display: inline-block;
 }
 
-.right_icon li a .active {
+ /* .right_icon li a .active {
   background: #047985;
   color: #ffffff;
-}
+}  */
 
 /* main navbar start  */
 
