--- a/Website_Scss/css/_varialble.scss
+++ b/Website_Scss/css/_varialble.scss
@@ -1,6 +1,9 @@
 $mainColor : #E4572E;
 $title_fontsize : 30px;
-$nav_width : 100vw;
+$width : 100%;
 $nav_height : 50px;
 $monofont : 'Montserrat', sans-serif;
 $titlefont : 'Balsamiq Sans', cursive;
+$teaminfo_width : 45% ;
+$teaminfo_height : 300px;
+$team_container_height : 100%;
